# SlowControlTBL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CosmicTrigger/: Makefile
CosmicTrigger/include/: Discri.cpp  Event.h  HV.cpp  TDC.cpp  TDC.h  VmeBoard.cpp  VmeBoard.h  VmeController.h  VmeUsbBridge.cpp  VmeUsbBridge.h
CosmicTrigger/scripts/: testTrig.cpp
grafana/: grafana.json
include/: ConditionManager.h  DiscriSettingsWindow.h  FakeSetupManager.h  HVGroup.h  Interface.h  Linkdef.h  LoggingManager.h  PythonDB.h  RealSetupManager.h  Setup.h  SetupManager.h  Trigger_TDC_Group.h  Utils.h
python/: otsdb_client.py
src/: ConditionManager.cpp  DiscriSettingsWindow.cpp  FakeSetupManager.cpp  HVGroup.cpp  Interface.cpp  LoggingManager.cpp  PythonDB.cpp  RealSetupManager.cpp  Setup.cpp  Trigger_TDC_Group.cpp  main.cpp
